# runGhcBWrap

./: Example.hs  README.md  default.nix  mkDrv.nix  runGhcBWrap.cabal  server.cabal  shell.nix  test-shell.nix
src/: Main.hs  RunGhcBWrap.hs
thunks/IStr/: github.json
thunks/runGhcBWrap-core/: github.json
thunks/scrappy-core/: github.json
