--cabal-version: 3.10
cabal-version: >= 1.8
name: runGhcBWrap
version: 0.1.0.0
--license: BSD-3-Clause
build-type: Simple

library
  hs-source-dirs: src
  build-depends:
      base
    , text
    , which
    , directory
    , filepath
    , temporary
    , process
  exposed-modules:
        RunGhcBWrap
    --, ClasshSS
    -- , wai
    -- , warp
    -- , http-types
    -- , text
    -- , time
    -- , bytestring
    -- , ghc
    -- , ghc-paths
    -- , exceptions
    -- , silently
  --ghc-options: -threaded -rtsopts -with-rtsopts=-N
  --default-language: Haskell2010
