cabal-version: 3.0
name: server
version: 0.1.0.0
license: BSD-3-Clause
build-type: Simple

executable server
  main-is: Main.hs
  hs-source-dirs: src
  build-depends:
      base >= 4.18 && < 5
    , wai
    , warp
    , http-types
    , text
    , time
    , bytestring
    , ghc
    , ghc-paths
    , exceptions
    , silently
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
